infras/k8s-yaml/containerd-certs-setup.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: containerd-certs-setup
  namespace: kube-system
  labels:
    app: containerd-certs-setup
spec:
  selector:
    matchLabels:
      name: containerd-certs-setup
  template:
    metadata:
      labels:
        name: containerd-certs-setup
    spec:
      tolerations:
      - operator: Exists
        effect: NoSchedule
      - operator: Exists
        effect: NoExecute
      containers:
      - name: pause
        image: registry.k8s.io/pause:3.9
      volumes:
      - name: host-containerd
        hostPath:
          path: /etc/containerd
