infras/k8s-yaml/02-keycloak-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: security
  labels:
    zta.job7189/role: sso
    zta.job7189/tier: T1
    zta.job7189/env: prod
    zta.job7189/data-classification: confidential
    zta.job7189/exposure: internal
    zta.job7189/team: security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        zta.job7189/role: sso
        zta.job7189/tier: T1
        zta.job7189/env: prod
        zta.job7189/data-classification: confidential
        zta.job7189/exposure: internal
        zta.job7189/team: security
      annotations:
        image.zta/signed-by: zta-platform-team
        image.zta/signature-algo: cosign-ecdsa-p256-sha256
        image.zta/signed-at: '2026-06-11T02:57:48Z'
        image.zta/key-id: c2d16f60b48d9dd8d014f99a221072e35ebe3100f66fd1bce3cdf3f4e92b4541
        image.zta/signature: TUVRQ0lFOUdnYkhQOVhwelRNeEhaZ2ZGbVRSajNETzZlaVc2bVhSTTJGNDZrSlkwQWlCaWwzajY5V1hvK3lkK1ZTR2tUVWZDV0tIcmhGTjU0QTN2L20yei9YbkVOZz09
    spec:
      serviceAccountName: keycloak
      containers:
      - name: keycloak
        image: 100.74.189.43:5443/job7189/keycloak-custom:v1.0
        imagePullPolicy: Always
        command:
        - /opt/keycloak/bin/kc.sh
        - start-dev
        - --import-realm
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /health/ready
            port: 8080
          failureThreshold: 60
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 6
        resources:
          requests:
            cpu: 200m
            memory: 768Mi
          limits:
            cpu: 1500m
            memory: 1536Mi
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: security
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: keycloak
