infras/k8s-yaml/l7-test-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: l7-test-svc
  namespace: job7189-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      serviceAccountName: l7-test-svc
      containers:
      - name: http-echo
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=OK"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: l7-test-svc
  namespace: job7189-apps
spec:
  selector:
    app: identity-service
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
