infras/k8s-yaml/99-cilium-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-only-kong-to-admin-ui
  namespace: management
spec:
  endpointSelector:
    matchLabels:
      app: phpmyadmin
  ingress:
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": gateway
        app: kong-gateway
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
